--- a/style.css
+++ b/style.css
@@ -72,6 +72,22 @@ div input{
     font-size: 14px;
     background-color: rgba(255, 255, 255, 0);
 }
+.centered button{
+    margin: 30px 20px 0px 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(0, 0, 0, 0.048);
+    color: rgb(15, 15, 15);
+    font-size: 12px;
+    border: none;
+    text-decoration: none;
+    border-radius: 3px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.centered button:hover{
+    background-color: rgb(230, 230, 230);
+    cursor: pointer ;
+}
 /* Footer */
 footer {
     position: absolute;
